--- a/player.html
+++ b/player.html
@@ -5,12 +5,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="img\brasil.ico" />
+    <link rel="shortcut icon" href="img\relogio.png" />
     <title>Development</title>
 </head>
 
@@ -26,8 +27,8 @@
 
 
 <center><div id="opcoes">       
-<input type="button" class="btn btn-primary btn-lg" value="Agendar evento com audio local" onclick="opcaoLocal();">
-<input type="button" class="btn btn-secondary btn-lg" value="Agendar evento com link" onclick="opcaoLink();">
+<button class="btn btn-primary btn-lg" onclick="opcaoLocal();">Agendar com audio local</button>
+<button class="btn btn-secondary btn-lg" onclick="opcaoLink();">Agendar com link</button>
 </div></center><br>
 
 <div id="displaySemantico">
