--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -16,15 +17,15 @@
 </head>
 
 <body id="corpo">
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-pills nav-fill">
     <li class="nav-item">
-      <a class="nav-link active" href=".\index.html">Pagina Incial</a>
+      <a class="nav-link active" href="index.html">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href=".\player.html">Agendar evento</a>
+      <a class="nav-link" href="player.html">Agendar audio</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Documentação</a>
+      <a class="nav-link" href="sobre.html">Sobre</a>
     </li>
   </ul>
 <br>
