--- a/player.html
+++ b/player.html
@@ -16,7 +16,17 @@
 </head>
 
 <body id="corpo">
-
+  <ul class="nav nav-pills nav-fill">
+    <li class="nav-item">
+      <a class="nav-link active" href="index.html">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="player.html">Agendar audio</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="sobre.html">Sobre</a>
+    </li>
+  </ul>
 
           <div id="demo" class="display-2"></div>
             
