--- a/sobre.html
+++ b/sobre.html
@@ -22,10 +22,10 @@
       </ul>
       <br>
     <div id="sobre">
-    <h3 id="title">Sobre o pragramar_sound:</h3>
+    <h3 id="title">Sobre o program_sond:</h3>
     <p>Ferramenta feita para aperfeiçoamento na linguagem Javascript<br>
     Com ela é possivel programar com audio local ou de (Streeming.mp3 ou<br>
-    wav ou m3u8t) para tocar em horario expecifico determinado pelo usuarios.</p>
+    wav ou m3u8t para tocar em horario expecifico determinado pelo usuarios.</p>
 </div>
 <footer>
     <p>&copy; Mauricio Nunes</p>
