--- a/player.html
+++ b/player.html
@@ -30,8 +30,8 @@
     </li>
   </ul>
 
-<div id="demo" class="display-2"></div>
-                      
+<h3 id="demo"></h3>
+<center><p id="infoAgendado"></p></center>               
 <p id="agendamentoLocal"></p>
 <p id="agendamentoExterno"></p>
 
@@ -47,5 +47,8 @@
 <p id="playon"></p>
 
 </body>
-<script src="script.js"></script>
+<script src="horario.js"></script>
+<script src="link.js"></script>
+<script src="local.js"></script>
+<script src="diasSemana.js"></script>
 </html>
